# libiconv

./: CMakeLists.txt  README.md  iconv.h
ARM64/Debug/: libiconvD.exp  libiconvD.lib
ARM64/DebugStatic/: libiconvStaticD.lib
ARM64/Release/: libiconv.exp  libiconv.lib
ARM64/ReleaseStatic/: libiconvStatic.lib
Win32/Debug/: libiconvD.exp  libiconvD.lib
Win32/DebugStatic/: libiconvStaticD.idb  libiconvStaticD.lib
Win32/Release/: libiconv.exp
Win32/ReleaseStatic/: libiconvStatic.lib
x64/Debug/: libiconvD.exp  libiconvD.lib
x64/DebugStatic/: libiconvStaticD.idb  libiconvStaticD.lib
x64/Release/: libiconv.exp  libiconv.lib
x64/ReleaseStatic/: libiconvStatic.lib
